Upgraded Home Page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
 </head>
 <body>
 
+    <section id="main">
+        <div class="content">
+            <p>
+                Goodbye junk food. <br> Hello super healthy meals.
+            </p>
     
+            <a class="first-btn" href="#">I'm Hungry</a>
+            <a class="second-btn" href="#">Show More</a>
+        </div>
+    </section>
     
 </body>
 </html>
