--- a/index.html
+++ b/index.html
@@ -52,6 +52,58 @@
     </section>
 
     <!-- Main Section Ends Here -->
+
+
+
+    <!-- Features Section Starts Here -->
+
+    <section id="features">
+
+        <div class="row">
+            <h2>Get food fast — not fast food</h2>
+                <p class="feature-text">
+                    Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+                </p>
+        </div>
+
+        <div class="row">
+
+            <div class="col span-1-of-4">
+                <i class="ion-ios-infinite"></i>
+                <h2>Up to 365 days/year</h2>
+                <p class="feature-text">
+                    Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
+                </p>
+            </div>
+
+            <div class="col span-1-of-4">
+                <i class="ion-ionic"></i>
+                <h2>Ready in 20 minutes</h2>
+                <p class="feature-text">
+                    You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
+                </p>
+            </div>
+
+            <div class="col span-1-of-4">
+                <i class="ion-log-out"></i>
+                <h2>100% organic</h2>
+                <p class="feature-text">
+                    All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
+                </p>
+            </div>
+
+            <div class="col span-1-of-4">
+                <i class="ion-log-in"></i>
+                <h2>Order anything</h2>
+                <p class="feature-text">
+                    We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
+                </p>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Features Section Ends Here -->
     
 </body>
 </html>
